--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -179,8 +179,8 @@
     position: relative;
 
     img{
-        width: 100%;
-        object-fit: contain;
+        width:50%;
+        object-fit:inherit;
         z-index: 1;
     }
 
@@ -190,8 +190,8 @@
         right: 0;
         bottom: 0;
         z-index: 0;
-        width: 100%;
-        height: 90%;
+        width: 50%;
+        height: 60%;
     }
     @media screen and (max-width:1200px){
         margin: 2rem 0;
